--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,9 @@ fastapi==0.104.1
 uvicorn[standard]==0.24.0
 python-multipart==0.0.6
 pydantic==2.5.0
+python-dotenv==1.0.1
+google-generativeai==0.8.4
+google-cloud-aiplatform==1.49.0
 scanpy==1.9.3
 pandas==2.1.3
 numpy==1.26.2
