connecting to firestore

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 venv/
+\.venv/
 venv_py313_backup/
 data/
 frontend-react/node_modules/
@@ -6,4 +7,5 @@ frontend-react/dist/
 __pycache__/
 *.pyc
 .env
+backend/credentials/
 
