--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ pydantic==2.5.0
 python-dotenv==1.0.1
 google-generativeai==0.8.4
 google-cloud-aiplatform==1.49.0
+google-cloud-firestore==2.15.0
 scanpy==1.9.3
 pandas==2.1.3
 numpy==1.26.2
