--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,9 @@ pandas==2.1.3
 numpy==1.26.2
 scikit-learn==1.3.2
 scipy==1.11.4
+openpyxl==3.1.2
+leidenalg==0.10.2
+python-igraph==0.11.4
 faiss-cpu==1.7.4
 matplotlib==3.8.2
 seaborn==0.13.0
@@ -18,3 +21,4 @@ anndata==0.10.5
 h5py==3.10.0
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
+argon2-cffi==23.1.0
